# cbgwebsite

./: .gitignore  CBGWebSite.hs  Main.hs  NewRepository.hs  Privileges.hs  Repository.hs  Users.hs  Utils.hs  cabal.config  cbgwebsite.cabal  cbgwebsite.rc  compile  layout.hamlet  removeEitherT.sh  stack.yaml
content/aktuelles.n/: title.p
content/hello/: text.md
content/projekte/: text.md
content/welcome/: text.md
data/content/aktuelles.n/: text.md.p  title.p
data/content/aktuelles.n/santichlaus.n/: text.md.p  title.p
members/calendar/2015.n/5.n/2015-05-01T00:00:00.n/: description.p  endDate.p  startDate.p
members/list/Franz Müller/: city
members/list/Franz Müller.n/: address.p  city.p
members/list/Fritz Meier/: address  city  phone  type
members/list/Fritz Meier.n/: address.p  city.p  email.p
src/app/haskell/: Main.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Model/Impl/: Asset.hs  Calendar.hs  Event.hs  Gallery.hs  Member.hs  Navigation.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Repo/: Class.hs  Repository.hs  Types.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Repo/Impl/: FileStorage.hs  NewRepository.hs  Repository.hs  Utils.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Web/: Component.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Web/Impl/: CBGWebSite.hs  Foundation.hs  Layout.hs  Privileges.hs  Users.hs  layout.hamlet  newlayout.hamlet
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Web/Impl/Handler/: Assets.hs  Calendar.hs  Content.hs  Galleries.hs  MemberList.hs  Root.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Web/Main/: Main.hs
src/main/haskell/CH/ComeBackGloebb/CBGWebSite/Web/static/: garland.css
src/main/haskell/ch/comebackgloebb/cbgwebsite/repo/impl/: NewRepository.hs  Repository.hs  Utils.hs
src/main/haskell/ch/comebackgloebb/cbgwebsite/web/impl/: CBGWebSite.hs  Privileges.hs  Users.hs  layout.hamlet
src/main/haskell/ch/comebackgloebb/cbgwebsite/web/main/: Main.hs
src/main/haskell/ch/comebackgloebb/cbgwebsite/web/static/: MemberCalendarController.js
src/test/haskell/: Main.hs
src/test/haskell/CH/ComeBackGloebb/CBGWebSite/Model/: Asset.hs
src/test/haskell/Test/Model/: Asset.hs
src/test/haskell/Test/Repo/: Repository.hs
static/: MemberCalendarController.js  MemberListController.js
