Name:           cbgwebsite
Version:        0.1.0

Author:         Axel Hanikel <ahanikel@gmail.com>
Copyright:      (c) Axel Hanikel 2015
Homepage:       https://github.com/ahanikel/cbgwebsite
Bug-Reports:    https://github.com/ahanikel/cbgwebsite/issues
Synopsis:       The Come Back Glöbb Web Site
Cabal-Version:  >= 1.18.1.5
Build-Type:     Simple
Description:    The Come Back Glöbb Web Site

Executable CBGWebSite
  Main-Is: Main.hs
  Default-Language: Haskell2010
  Build-Depends: base
               , directory
               , text
               , yesod
               , yesod-auth
               , yesod-static
               , wai
               , shakespeare
               , http-conduit
               , pandoc
               , filepath
               , http-types
               , aeson
               , mtl
               , either

test-suite test
  Default-Language: Haskell2010
  hs-source-dirs: test
  main-is: main.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , cbgwebsite
  --ghc-options: -O2

source-repository head
  type:     git
  location: https://github.com/haskell/cbgwebsite
